--- a/redesign1.qmd
+++ b/redesign1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "redesign1"
+title: "Redesign 1"
 ---
 
 # Redesign 1: Faceted Line Plot
@@ -7,7 +7,7 @@ title: "redesign1"
 ## Bad Graph: Spiral Graph
 
 ![Spiral Graph](spiral_image.jpg)
-![**Why the Spiral Graph is a Bad Visualization**
+**Why the Spiral Graph is a Bad Visualization**
 
 There are many reasons why a **spiral graph** is considered a very bad choice to show complex or time-series data:
 
@@ -32,16 +32,18 @@ Times-series data are, by definition, linear because time itself is a natural an
 ## Improved Graph: Faceted Line Plot
 
 ![Faceted Line Plot](redesign1_pic.jpg)
-1. **Faceted Line Plots**
+##Faceted Line Plots**
 
 **Why it good**
-*Clarity and Simplicity*: Faceted line plots display data that are in categories, such as countries, as multiple small line graphs. This method ensures the viewer focuses on each country trend separately without those coming with plotting on a single graph.
+1. **Clarity and Simplicity**: Faceted line plots display data that are in categories, such as countries, as multiple small line graphs. This method ensures the viewer focuses on each country trend separately without those coming with plotting on a single graph.
 Comparability : Data for each country is clearly separated. This makes it easy to compare throughout the trend of each country since there are no overlaps. The viewer can view the death trends of each country over time and somehow compares them side by side.
-*Trend Accuracy*: The line graph maintains continuity of time-series data, wherein trends such as increases, decreases, spikes, etc. are immediately evident and represented correctly. Unlike the spiral, it doesn't distort the data.
-*Scalability*: Faceted plots allow custom scaling, so scales = "free_y" will ensure each country's data is scaled optimally without being biased by other countries' bigger or smaller data. This can be quite relevant for countries that have different death rates; this advice would avoid visually downplaying the smaller trends.
+
+2. **Trend Accuracy**: The line graph maintains continuity of time-series data, wherein trends such as increases, decreases, spikes, etc. are immediately evident and represented correctly. Unlike the spiral, it doesn't distort the data.
+
+3. **Scalability**: Faceted plots allow custom scaling, so scales = "free_y" will ensure each country's data is scaled optimally without being biased by other countries' bigger or smaller data. This can be quite relevant for countries that have different death rates; this advice would avoid visually downplaying the smaller trends.
 
 ###Why it's better than a spiral
-It steers clear of the confusion and distortion such a circular shape would create, so each trend from it is clear, linear, and non-overlapping.]
+It steers clear of the confusion and distortion such a circular shape would create, so each trend from it is clear, linear, and non-overlapping.
 
 
 
