--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,21 @@
 ---
-title: "Mid_Project"
+title: "Visualization"
+image: visualization.png
+about:
+  template: trestles
+  image-shape: rectangle
+  image-width: 50em
+  links:
+    - text: Medha Email
+      icon: envelope
+      href: mailto:medhachada30@gmail.com
+    - text: Medha GitHub
+      icon: github
+      href: https://github.com/mchada3
+    - text: Deekshitha Email
+      icon: envelope
+      href: mailto:deekshithakalluru@gmail.com
+    - text: Deekshitha GitHub
+      icon: github
+      href: https://github.com/deeekshithaa
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
