--- a/redesign3.qmd
+++ b/redesign3.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Redesign 3"
 ---
+
 # Redesign 3: Bubble Chart
 
 ## Bad Graph: Spiral Graph
@@ -19,8 +20,7 @@ There are many reasons why a **spiral graph** is considered a very bad choice to
 
 4.  **Poor with Timeseries Data**: Times-series data are, by definition, linear because time itself is a natural and simple function. Spiral presentation of such data discredits the 'natural flow' and the audience has to work their brains for a while to trace a straight line in their minds.
 
-.  In cases of more than one time period, the spiral graph is very cluttered and normally does not permit the viewing of an individual point or of a trend over a given period.
-
+. In cases of more than one time period, the spiral graph is very cluttered and normally does not permit the viewing of an individual point or of a trend over a given period.
 
 ## Improved Graph: Bubble Chart
 
@@ -36,5 +36,4 @@ There are many reasons why a **spiral graph** is considered a very bad choice to
 
 **Space Usage:** A good bubble chart makes better use of space than does a spiral graph. Therefore, it would be neater and less cluttered, hence capable of housing a large number of data points-countries.
 
-###Why it's better than a spiral :
-- The bubble chart shows the relative size much clearer and is much easier to interpret at a glance. While the spiral graph, due to its overlapping points and confusing trends, did not state so clearly that some countries have higher or lower cumulative deaths, the bubble chart does. This clarity in perceived size avoids ambiguity from the shape of the spiral itself.
+###Why it's better than a spiral : - The bubble chart shows the relative size much clearer and is much easier to interpret at a glance. While the spiral graph, due to its overlapping points and confusing trends, did not state so clearly that some countries have higher or lower cumulative deaths, the bubble chart does. This clarity in perceived size avoids ambiguity from the shape of the spiral itself.
