--- a/explanation2.qmd
+++ b/explanation2.qmd
@@ -22,7 +22,30 @@ title: "Explanation of Oil Production Graphs"
 # Oil Production: Bar Plot
 ## Improved Bar Plot
 
-![](oil_bargraph.jpg)
+```{r, echo=FALSE,  message=FALSE, warning=FALSE}
+# Creating a bar plot of oil production by country
+
+library(ggplot2)
+library(plotly)
+
+# Creating a bar plot of oil production by country with custom colors
+visualization1 <- ggplot(oildataset, aes(x = reorder(Country, `Oil Production (Thousand B/D)`), 
+                                         y = `Oil Production (Thousand B/D)`, fill = Group)) +
+  geom_bar(stat = "identity") +
+  coord_flip() +
+  labs(title = "Oil Production by Country in 2022", x = "Country", y = "Production (Thousand B/D)") +
+  scale_fill_manual(values = c("Non-OPEC Countries" = "darkmagenta", 
+                               "OPEC Countries" = "chocolate", 
+                               "OPEC+ Countries" = "darkolivegreen4")) +  
+  theme_minimal()
+
+# Convert to interactive plot using plotly
+bar_chart <- ggplotly(visualization1)
+
+# Display the graph
+bar_chart
+```
+
 
 ### Why do we consider bar as good graph?
 
@@ -40,7 +63,46 @@ A **bar plot** strengthens this display by directly addressing the two most impo
 
 # Improved Geo Plot
 
-![](oil_geograph.jpg) 
+```{r, echo=FALSE,  message=FALSE, warning=FALSE}
+#install.packages("rnaturalearth") #package that allows access to Natural Earth map data.
+#install.packages("rnaturalearthdata") #this package provides the actual Natural Earth datasets.
+
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(ggplot2)
+library(dplyr)
+library(plotly)
+
+# Load world map data from rnaturalearth
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+# merging oil production data with world map 
+map_data <- world %>%
+  left_join(oildataset, by = c("name" = "Country"))
+
+
+# geospatial map 
+library(ggplot2)
+library(plotly)
+library(sf)        # For spatial data
+library(viridis)   # For color scales
+
+# creating a simple geospatial map for oil production
+geo_map <- ggplot(map_data) +
+  geom_sf(aes(fill = `Oil Production (Thousand B/D)`), color = "white") +  # Fill countries with oil production data
+  scale_fill_gradientn(colors = c("purple", "coral2", "darkgoldenrod2"), na.value = "gray") + 
+  labs(title = "Global Oil Production in the year 2022", fill = "Thousand B/D") +  # Adding titles and legend labels
+  theme_minimal() +  # Simple theme
+  theme(plot.title = element_text(hjust = 0.5))  # Center the title
+
+# normal graph to interactive
+interactive_geo_map <- ggplotly(geo_map)
+
+# display
+interactive_geo_map
+
+```
+
 
 ### Why is Geospatial Map good?
 
@@ -51,3 +113,17 @@ Adding Geographical Context another major failing of the original graph is the l
 **Regional Comparability:** Adding a geographical dimension to this map helps the user judge the global distribution of oil production. You can tell instantly, for example, which regions are responsible for the bulk of the world's oil, something you could not get from the bar plot by itself.
 
 **Visualize the trend in a global perspective:** The map will help view the significance of regions relying on the production of oil in their various countries by showing it on a global outlook to pinpoint regional "hotspots" where the production of oil occurs.
+
+
+## Graph Insights
+
+Largest Oil-Producing Countries:
+The first place is taken by the USA where 17,770 thousand barrels of oil are produced daily.
+Saudi Arabia comes second with 12,136 thousand barrels per day.
+Russia retains the third position, with a daily production capacity of 11,202 thousand barrels of oil.
+
+Production of oil in different groups:
+Out of all the available nations, it is the non-OPEC group that produces the maximum oil, consuming a total of 37,243 thousand barrels every day.
+OPEC+'s lot and OPEC Countries team rank behind them at 27,939 and 21,827 thousand barrels per day respectively.
+OPEC countries minus producer 21,827 thousand barrels per day
+The leaders in production of of oil are Non-OPEC countries with The U.S., Saudi Arabia and Russia being the most influential suppliers globally.
