--- a/codes.qmd
+++ b/codes.qmd
@@ -1,3 +1,5 @@
+codes
+
 Visualization1:
 
 library(ggplot2)
@@ -17,7 +19,7 @@ redesign1 <- ggplot(Dataset, aes(x = Date, y = Average_Deaths_Per_Day, fill = Co
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5))
 
-//creating interactive plot using plotly
+#creating interactive plot using plotly
 stacked_area_plot <- ggplotly(redesign1)
 
 # graph
