--- a/codes.qmd
+++ b/codes.qmd
@@ -1,6 +1,6 @@
-codes
+#codes
 
-Visualization1:
+##Visualization1:
 
 library(ggplot2)
 library(dplyr)
@@ -9,7 +9,7 @@ library(plotly)
 source("hw.R")
 
 
-Redesign 1:
+###Redesign 1:
 redesign1 <- ggplot(Dataset, aes(x = Date, y = Average_Deaths_Per_Day, fill = Country)) +
   geom_area(alpha = 0.6 , size = 0.5, color = "black")  +  
   labs(title = "Total Daily Deaths Over Time by Country (Stacked Area Chart)",
@@ -19,15 +19,13 @@ redesign1 <- ggplot(Dataset, aes(x = Date, y = Average_Deaths_Per_Day, fill = Co
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5))
 
-#creating interactive plot using plotly
-stacked_area_plot <- ggplotly(redesign1)
+stacked_area_plot <- ggplotly(redesign1) #creating interactive plot using plotly
 
-# graph
-stacked_area_plot
+stacked_area_plot # graph
 
 
 
-Redesign 2:
+###Redesign 2:
 Dataset <- Dataset %>%
   group_by(Country) %>%
   arrange(Date) %>%
@@ -46,11 +44,9 @@ redesign2 <- ggplot(Dataset, aes(x = Country, y = Cumulative_Deaths_Per_Day,
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5))
 
-# Creating interactive bubble chart using plotly
 bubble_chart <- ggplotly(redesign2)
 
-# graph
-bubble_chart
+bubble_chart # graph
 
 
 
@@ -58,7 +54,7 @@ bubble_chart
 
 
 
-Visualization 2:
+##Visualization 2:
 library(readxl) #to read xlsv files
 library(ggplot2)
 library(plotly)
@@ -68,7 +64,7 @@ source("hw.R")
 colnames(oildataset)
 
 
-Redesign 1:
+###Redesign 1:
 library(ggplot2)
 library(plotly)
 
@@ -82,17 +78,15 @@ visualization1 <- ggplot(oildataset, aes(x = reorder(Country, `Oil Production (T
                                "OPEC+ Countries" = "darkolivegreen4")) +  
   theme_minimal()
 
-# interactive
-bar_chart <- ggplotly(visualization1)
+bar_chart <- ggplotly(visualization1) # interactive
 
-# graph
-bar_chart
+bar_chart # graph
 
 
 
-Redesign 2:
-#install.packages("rnaturalearth") #package that allows access to Natural Earth map data.
-#install.packages("rnaturalearthdata") #this package provides the actual Natural Earth datasets.
+###Redesign 2:
+install.packages("rnaturalearth") #package that allows access to Natural Earth map data.
+install.packages("rnaturalearthdata") #this package provides the actual Natural Earth datasets.
 
 
 library(rnaturalearth)
@@ -101,30 +95,27 @@ library(ggplot2)
 library(dplyr)
 library(plotly)
 
-# world map data from rnaturalearth
-world <- ne_countries(scale = "medium", returnclass = "sf")
+world <- ne_countries(scale = "medium", returnclass = "sf") # world map data from rnaturalearth
 
-# merging oil production data with world map 
+
 map_data <- world %>%
-  left_join(oildataset, by = c("name" = "Country"))
+  left_join(oildataset, by = c("name" = "Country")) # merging oil production data with world map 
 
-# geospatial map 
+
 library(ggplot2)
 library(plotly)
 library(sf)        # For spatial data
 library(viridis)   # For color scales
 
-# creating a simple geospatial map for oil production
-geo_map <- ggplot(map_data) +
+
+geo_map <- ggplot(map_data) + # geospatial map 
   geom_sf(aes(fill = `Oil Production (Thousand B/D)`), color = "white") +  # Fill countries with oil production data
   scale_fill_gradientn(colors = c("purple", "coral2", "darkgoldenrod2"), na.value = "gray") + 
   labs(title = "Global Oil Production in the year 2022", fill = "Thousand B/D") +  # Adding titles and legend labels
   theme_minimal() +  # Simple theme
   theme(plot.title = element_text(hjust = 0.5))  # Center the title
 
-# normal graph to interactive
-interactive_geo_map <- ggplotly(geo_map)
+interactive_geo_map <- ggplotly(geo_map) #normal graph to interactive
 
-# display
-interactive_geo_map
 
+interactive_geo_map # display
