--- a/video_presentation.qmd
+++ b/video_presentation.qmd
@@ -1,8 +1,7 @@
 ---
-Title: "Video"
+title: "Video Presentation"
+---
 
 ## Midproject Presentation
 
-{{< video https://www.youtube.com/embed/EELNRFiy9jA >}}
-
----
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EELNRFiy9jA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
